--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@
     Theme Name: Barebone
     Author: faizbyp
     Author URI: https://github.com/faizbyp
-    Description: -
+    Description: A barebone folder structure to make a Wordpress PHP theme from scratch.
 */
